2015-05-13  Adhemerval Zanella  <adhemerval.zanella@linaro.org>

	* sysdeps/unix/sysv/linux/aarch64/gettimeofday.c: Remove file.
	* sysdeps/unix/sysv/linux/s390/gettimeofday.c: Likewise.
	* sysdeps/unix/sysv/linux/tile/gettimeofday.c: Likewise.
	* sysdeps/unix/sysv/linux/aarch64/sysdep.h
	[HAVE_GETTIMEOFDAY_VSYSCALL]: Define.
	* sysdeps/unix/sysv/linux/s390/s390-32/sysdep.h
	[HAVE_GETTIMEOFDAY_VSYSCALL]: Likewise.
	* sysdeps/unix/sysv/linux/s390/s390-64/sysdep.h
	[HAVE_GETTIMEOFDAY_VSYSCALL]: Likewise.
	* sysdeps/unix/sysv/linux/tile/sysdep.h
	[HAVE_GETTIMEOFDAY_VSYSCALL]: Likewise.
	* sysdeps/unix/sysv/linux/gettimeofday.c: New file: gettimeofday
	using vDSO syscall macro.

	* sysdeps/unix/sysv/linux/aarch64/gettimeofday.c (HAVE_VSYSCALL):
	define and include sysdep-vdso.h.
	* sysdeps/unix/sysv/linux/s390/gettimeofday.c (HAVE_VSYSCALL):
	Likewise.
	* sysdeps/unix/sysv/linux/tile/gettimeofday.c (HAVE_VSYSCALL):
	Likewise.
	* sysdeps/unix/sysv/linux/aarch64/init-first.c (__vdso_gettimeofday):
	Use VDSO_SYMBOL macro to define and use PTR_MANGLE.
	(__vdso_clock_gettime): Likewise.
	(__vdso_clock_getres): Likewise.
	(_libc_vdso_platform_setup): Likewise.
	* sysdeps/unix/sysv/linux/i386/init-first.c (__vdso_clock_gettime):
	Likewise.
	(_libc_vdso_platform_setup): Likewise.
	* sysdeps/unix/sysv/linux/powerpc/init-first.c (__vdso_gettimeofday):
	Likewise.
	(__vdso_clock_gettime): Likewise.
	(__vdso_clock_getres): Likewise.
	(__vdso_get_tbfreq): Likewise.
	(__vdso_getcpu): Likewise.
	(__vdso_time): Likewise.
	(__vdso_sigtramp_rt64): Likewise.
	(__vdso_signtramp32): Likewise.
	(__vdso_sigtramp_rt32): Likewise.
	(_libc_vdso_platform_setup): Likewise.
	* sysdeps/unix/sysv/linux/s390/init-first.c (__vdso_gettimeofay):
	Likewise.
	(__vdso_clock_gettime): Likewise.
	(__vdso_clock_getres): Likewise.
	(_libc_vdso_platform_setup): Likewise.
	* sysdeps/unix/sysv/linux/tile/init-first.c (__vdso_gettimeofday):
	Likewise.
	(__vdso_clock_gettime): Likewise.